# GovNewsSummary

./: .env  .gitignore  main.py  pyproject.toml
reports/: Daily_PressRelease_Report_20251226.txt
tools/: ContentSummarizer.py  ReportGenerator.py  SummaryConsolidator.py  newsFetcher.py  writeReport.py
